# pmlogsynth

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pmlogsynth-phase1-spec.md  pmlogsynth-phase2-spec.md  pmlogsynth-phase3-spec.md  pre-commit.sh  pyproject.toml  setup-venv.sh  spike.yml
.claude/commands/: generate-profile.md
.github/workflows/: ci.yml  release.yml
.specify/memory/: constitution.md
docs/: complete-example.yml  pcp-tools.md  profile-format.md  spike.yml
generated-archives/: .gitignore
man/: pmlogsynth.1
pmlogsynth/: __init__.py  __main__.py  cli.py  fleet.py  jitter.py  pcp_constants.py  profile.py  sampler.py  schema_context.md  time_parsing.py  timeline.py  writer.py
pmlogsynth/domains/: __init__.py  base.py  cpu.py  disk.py  load.py  memory.py  metadata.py  network.py  system.py
pmlogsynth/fleet/: __init__.py  assignment.py  display.py  loader.py  manifest.py  models.py  orchestrator.py  warnings.py
pmlogsynth/profiles/: compute-optimized.yaml  generic-large.yaml  generic-medium.yaml  generic-small.yaml  generic-xlarge.yaml  memory-optimized.yaml  storage-optimized.yaml
specs/: phase2-deferred-scope.md
specs/001-pmlogsynth-phase1/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-phase2-e2e-docs/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-dx-improvements/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-pmrep-view-support/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-ai-profile-generation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-relative-starttime/: data-model.md  plan.md  research.md  spec.md  tasks.md
tests/: conftest.py
tests/e2e/: test_e2e.py  test_pmrep_views.py
tests/fixtures/: jitter-baseline.yaml  workload-linear-ramp.yaml  workload-repeat-daily.yaml
tests/integration/: test_fleet_integration.py  test_profile_integration.py  test_writer.py
tests/tier1/: test_domain_cpu.py  test_domain_disk.py  test_domain_load.py  test_domain_memory.py  test_domain_network.py  test_list_metrics.py  test_profile.py  test_profile_resolver.py  test_timeline_scenarios.py  test_validation.py
tests/tier2/: test_writer.py
tests/tier3/: test_e2e.py
tests/unit/: test_cli.py  test_domain_cpu.py  test_domain_disk.py  test_domain_load.py  (+21 more)
(+40 files in other folders)
