[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "pcp-pmlogsynth"
dynamic = ["version"]
description = "Synthetic PCP archive generator from declarative YAML workload profiles"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
dependencies = ["PyYAML>=5.1"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.3", "mypy>=1.0", "types-PyYAML>=6.0"]
ai  = ["anthropic>=0.20.0"]

[project.scripts]
pmlogsynth = "pmlogsynth.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["pmlogsynth"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"

[tool.hatch.build.hooks.vcs]
version-file = "pmlogsynth/_version.py"

[tool.hatch.build.targets.wheel.shared-data]
"man/pmlogsynth.1" = "share/man/man1/pmlogsynth.1"

[tool.ruff]
target-version = "py38"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I"]

[tool.mypy]
python_version = "3.9"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
markers = [
    "unit: unit tests, no PCP required",
    "integration: integration tests, PCP mocked",
    "e2e: E2E tests, real PCP required",
]
testpaths = ["tests"]
